# Auto_DeviceReset

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
